# poly-crypto-bot

./: .gitignore  EXAMPLES_README.md  IMPLEMENTATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  StrategyService.md  TRADING_SYSTEM.md  demo_predictions.py  example_usage.py  individual_vs_ensemble_comparison.py  main.py  main.py.bak  pyproject.toml  run_tests.py  simple_prediction_test.py  simple_trading_example.py  test_strategy_service.py  test_trading_system.py  trading_integration_example.py  ts_convert.py
config/: config.yaml  example.yaml
data/: analyze_example.py  download_data.py  requirements.txt
models/: features.json  lightgbm_model.joblib  results.json  scaler.joblib
src/adapter/database/: sqlite_adapter.py
src/adapter/exchange/: binance.py
src/adapter/prediction_market/: polymarket.py
src/adapters/polymarket/: maket_data_client.py  market_data_client.py
src/adapters/price_providers/: binance_price_provider.py
src/application/: application.py
src/config/: application.py  application_config.py  binance.py  market_monitor_config.py  polymarket.py  price_feed_config.py  scheduling.py
src/core/interface/: exchange.py  market_client.py  prediction_market.py  price_data_provider.py  strategy.py
src/core/interfaces/: market_client.py
src/core/model/: asset.py  position.py  prediction_market.py  price.py  signal.py  trade.py
src/core/models/: asset.py  prediction_market.py
src/core/service/: market_monitor.py  position_manager.py  (+4 more)
src/prediction/: features.py  predictor.py  train.py
src/utils/: time.py
tests/: README.md  test_time.py
(+1 files in other folders)
