[project]
name = "polymarket-crypto-expiry-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars>=1.0.0",
    "pyarrow>=21.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "ruff>=0.12.10",
    "schedule>=1.2.0",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.0",
]
[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I"]
